# task-stack

./: .gitignore  .npmrc  .windsurfrules  Cargo.toml  Makefile.toml  README.md  index.html  package.json  pnpm-lock.yaml  tasks.db
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test-pr.yml
src/: index.css  main.ts
src-tauri/: Cargo.toml  tasks.db  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: database.rs  lib.rs  main.rs  routes.rs  tasks.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ui/: components.rs  pages.rs
src-tauri/src/ui/components/: mod.rs  navigation.rs  notification.rs  task.rs
src-tauri/src/ui/pages/: index.rs  list.rs  lists.rs  mod.rs
src/lib/: directives.ts  ui.ts
