[workspace]
resolver = "2"
members = ["src-tauri"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.metadata.bin]
cargo-make = { version = "0.37.24" }
cargo-nextest = { version = "0.9.88" }
cargo-watch = { version = "8.5.3" }
tauri-cli = { version = "2.2.5", bins = ["cargo-tauri"] }
