[workspace]
resolver = "2"
members = ["src-tauri"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.metadata.bin]
cargo-edit = { version = "0.13.1", bins = ["cargo-add", "cargo-rm", "cargo-upgrade"]}
cargo-make = { version = "0.37.24" }
cargo-nextest = { version = "0.9.92" }
cargo-udeps = { version = "0.1.55" }
cargo-watch = { version = "8.5.3" }
tauri-cli = { version = "2.3.1", bins = ["cargo-tauri"] }
