[package]
name = "task-stack"
version = "0.1.0"
description = "A Tauri App"
authors = ["Eric Kwoka"]
edition = "2021"

[lib]
name = "task_stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri = { version = "2.2.3", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-shell = "2.2.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
