[package]
name = "task-stack"
version = "0.1.0"
description = "A Tauri App"
authors = ["Eric Kwoka"]
edition = "2021"

[lib]
name = "task_stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
html-node = { version = "0.5.0", features = ["pretty"] }
libsql = "0.6.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri = { version = "2.3.0", features = ["unstable"] }
ulid = { version = "1.2.0", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
